force-app/main/default/objects/cs_CustomPathConfig__mdt/cs_CustomPathConfig__mdt.object-meta.xml
<CustomObject>
    <label>Custom Path Config</label>
    <pluralLabel>Custom Path Configs</pluralLabel>
</CustomObject>