force-app/main/default/objects/cs_CustomPathConfig__mdt/fields/closed_Stages__c.field-meta.xml
<CustomField>
    <fullName>closed_Stages__c</fullName>
    <description>JSON with closed lost and won stages values in this format:
{
	&quot;Losts&quot;: [
		&quot;Lost&quot;,
		&quot;Project Cancelled&quot;,
		&quot;Invalid Data&quot;
	],
	&quot;Wons&quot;: [
		&quot;Won (Awarded)&quot;
	]
}</description>
    <inlineHelpText>JSON with closed lost and won stages values in this format:
{
	&quot;Losts&quot;: [
		&quot;Lost&quot;,
		&quot;Project Cancelled&quot;,
		&quot;Invalid Data&quot;
	],
	&quot;Wons&quot;: [
		&quot;Won (Awarded)&quot;
	]
}</inlineHelpText>
    <label>closed Stages</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>