force-app/main/default/objects/cs_CustomPathConfig__mdt/fields/closeFlow__c.field-meta.xml
<CustomField>
    <fullName>closeFlow__c</fullName>
    <label>Close Flow</label>
    <length>150</length>
    <type>Text</type>
</CustomField>