force-app/main/default/objects/cs_CustomPathConfig__mdt/fields/finalStage__c.field-meta.xml
<CustomField>
    <fullName>finalStage__c</fullName>
    <label>Final Stage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>