force-app/main/default/objects/cs_CustomPathConfig__mdt/fields/key_field__c.field-meta.xml
<CustomField>
    <fullName>key_field__c</fullName>
    <label>key field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>