force-app/main/default/objects/cs_CustomPathConfig__mdt/fields/metadataPath__c.field-meta.xml
<CustomField>
    <fullName>metadataPath__c</fullName>
    <label>metadataPath</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>